--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ go:
   - 1.2
   
 after_success:
+  - go get code.google.com/p/go.tools/cmd/cover
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - export PATH=$PATH:$HOME/gopath/bin/
