--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ after_success:
   - goveralls rgaztLT7pidhfXGLbQz3bMowiBeB1XJlS
   
 before_install:
-  - wget dist.neo4j.org/neo4j-community-2.0.0-RC1-unix.tar.gz
-  - tar -xzf neo4j-community-2.0.0-RC1-unix.tar.gz
-  - neo4j-community-2.0.0-RC1/bin/neo4j start
+  - wget dist.neo4j.org/neo4j-community-2.0.0-unix.tar.gz
+  - tar -xzf neo4j-community-2.0.0-unix.tar.gz
+  - neo4j-community-2.0.0/bin/neo4j start
