--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,6 @@ before_install:
   - tar -xzf neo4j-community-$NEO_VERSION-unix.tar.gz
   - echo "org.neo4j.server.transaction.timeout=1" >> neo4j-community-$NEO_VERSION/conf/neo4j-server.properties
   - neo4j-community-$NEO_VERSION/bin/neo4j start
+
+script:
+  - go test -v -gocheck.v
