--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,6 @@ after_success:
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - export PATH=$PATH:$HOME/gopath/bin/
-  - tail +2 typescov.out >> cov.out
-  - goveralls -coverprofile=cov.out rgaztLT7pidhfXGLbQz3bMowiBeB1XJlS
   
 before_install:
   - go get code.google.com/p/go.tools/cmd/cover
@@ -23,6 +21,9 @@ before_install:
   - neo4j-community-$NEO_VERSION/bin/neo4j start
 
 script:
-  - go test ./types -coverprofile=typescov.out
-  - go test -coverprofile=cov.out
-  - go test -gocheck.b
+  - go test ./types -covermode=count -coverprofile=typescov.out
+  - go test -covermode=count -coverprofile=cov.out
+  - go test -gocheck.b -covermode=count -coverprofile=bench.out
+  - tail +2 typescov.out >> cov.out
+  - tail +2 bench.out >> cov.out
+  - goveralls -coverprofile=cov.out rgaztLT7pidhfXGLbQz3bMowiBeB1XJlS
