--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ script:
   - go test ./types -covermode=count -coverprofile=typescov.out
   - go test -covermode=count -coverprofile=cov.out
   - go test -gocheck.b -covermode=count -coverprofile=bench.out
-  - tail +2 typescov.out >> cov.out
-  - tail +2 bench.out >> cov.out
+  - tail -n +2 typescov.out >> cov.out
+  - tail -n +2 bench.out >> cov.out
   - goveralls -coverprofile=cov.out rgaztLT7pidhfXGLbQz3bMowiBeB1XJlS
