--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ before_install:
   - wget dist.neo4j.org/neo4j-community-$NEO_VERSION-unix.tar.gz
   - tar -xzf neo4j-community-$NEO_VERSION-unix.tar.gz
   - echo "org.neo4j.server.transaction.timeout=1" >> neo4j-community-$NEO_VERSION/conf/neo4j-server.properties
+  - git clone https://github.com/jexp/neo4j-in-memory-server
+  - cd neo4j-in-memory-server
+  - ./copy.sh ../neo4j-community-$NEO_VERSION 
   - neo4j-community-$NEO_VERSION/bin/neo4j start
 
 script:
