trying coverage without bench

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   - go test -covermode=count -coverprofile=cov.out
   - go test -gocheck.b -covermode=count -coverprofile=bench.out
   - tail -n +2 typescov.out >> bench.out
-  - tail -n +2 cov.out >> bench.out
+#  - tail -n +2 cov.out >> bench.out
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - export PATH=$PATH:$HOME/gopath/bin/
