Revert "trying just tests"
This reverts commit 6184e5adc525a67b72fed6b1206b8647e1a1e76c.

Conflicts:
	.travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,4 @@ script:
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - export PATH=$PATH:$HOME/gopath/bin/
-  - goveralls -coverprofile=cov.out rgaztLT7pidhfXGLbQz3bMowiBeB1XJlS
+  - goveralls -coverprofile=bench.out rgaztLT7pidhfXGLbQz3bMowiBeB1XJlS
